test/scc/decl/semantic-errors/073.a
073.t:1:14: error: variable 'a' declared 'register' at file scope